# efz-training-mode

./: .gitignore  CLOUD_AGENT_TEST.md  CMakeLists.txt  README.md  move.bat.txt  symbol_index.json
_codeql_build_dir/: Makefile
docs/: PROJECT_ANALYSIS.md  efzrevival_offsets_map.md
include/: auto_action.h  auto_action_helpers.h  auto_jump.h  bgm_control.h  character_settings.h  config.h  constants.h  frame_advantage.h  frame_analysis.h  frame_monitor.h  gui.h  imgui_gui.h  imgui_impl.h  input_handler.h  input_motion.h  logger.h  memory.h  network.h  overlay.h  practice_patch.h  utilities.h
include/core/: constants.h  di_keycodes.h  globals.h  logger.h  memory.h  version.h
include/game/: always_rg.h  attack_reader.h  auto_action.h  auto_action_helpers.h  auto_airtech.h  auto_jump.h  character_settings.h  collision_hook.h  efzrevival_addrs.h  efzrevival_scanner.h  final_memory_patch.h  fm_commands.h  frame_advantage.h  frame_analysis.h  frame_monitor.h  game_state.h  guard_overrides.h  macro_controller.h  per_frame_sample.h  practice_hotkey_gate.h  practice_offsets.h  practice_patch.h  random_block.h  random_rg.h  validation_metrics.h
include/gui/: embedded_gif.h  gif_player.h  gui.h  imgui_gui.h  imgui_impl.h  imgui_settings.h  native_pause_menu.h  overlay.h  pause_menu.h
include/input/: framestep.h  immediate_input.h  injection_control.h  input_buffer.h  input_core.h  input_debug.h  input_freeze.h  input_handler.h  input_hook.h  input_motion.h  motion_constants.h  motion_system.h  shared_constants.h
include/utils/: bgm_control.h  config.h  controller_names.h  debug_log.h  network.h  pause_integration.h  switch_players.h  utilities.h  xinput_shim.h
src/: auto_action.cpp  auto_action_helpers.cpp  auto_airtech.cpp  auto_jump.cpp  bgm_control.cpp  character_settings.cpp  config.cpp  dllmain.cpp  frame_advantage.cpp  frame_analysis.cpp  frame_monitor.cpp  game_state.cpp  gui.cpp  gui_auto_action.cpp  gui_dialog.cpp  gui_game_values.cpp  gui_movement.cpp  imgui_gui.cpp  imgui_impl.cpp  input_buffer.cpp  input_debug.cpp  input_handler.cpp  input_hook.cpp  input_motion.cpp  logger.cpp  memory.cpp  network.cpp  overlay.cpp  practice_patch.cpp  utilities.cpp
src/core/: di_keycodes.cpp  globals.cpp  logger.cpp  memory.cpp
src/game/: always_rg.cpp  attack_reader.cpp  auto_action.cpp  auto_action_helpers.cpp  auto_airtech.cpp  auto_jump.cpp  character_settings.cpp  collision_hook.cpp  efzrevival_addrs.cpp  efzrevival_scanner.cpp  final_memory_patch.cpp  fm_commands.cpp  frame_advantage.cpp  frame_analysis.cpp  frame_monitor.cpp  game_state.cpp  guard_overrides.cpp  macro_controller.cpp  practice_hotkey_gate.cpp  practice_overlay_gate.cpp  practice_patch.cpp  random_block.cpp  random_rg.cpp
src/gui/: gif_player.cpp  gui.cpp  gui_auto_action.cpp  gui_dialog.cpp  gui_game_values.cpp  imgui_gui.cpp  imgui_impl.cpp  imgui_settings.cpp  native_pause_menu.cpp  overlay.cpp  pause_menu.cpp
src/input/: framestep.cpp  immediate_input.cpp  input_buffer.cpp  input_core.cpp  input_freeze.cpp  input_handler.cpp  input_hook.cpp  input_motion.cpp  motion_system.cpp
src/utils/: bgm_control.cpp  config.cpp  controller_names.cpp  debug_log.cpp  network.cpp  pause_integration.cpp  switch_players.cpp  utilities.cpp  xinput_shim.cpp
